--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -28,6 +28,11 @@
                     <button>Edit</button>
                 </a>
             </td>
+            <td>
+                <a href="/delete/{{ item.id }}">
+                    <button>Delete</button>
+                </a>
+            </td>
         </tr>
         {% empty %}
         <tr>
